manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "node-voting-be-svc"
    annotations:    
        service.beta.kubernetes.io/azure-load-balancer-internal: "false"
    labels:
        app: "node-voting-be-svc"
spec:
    type: LoadBalancer
    # externalTrafficPolicy: Local
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "backend-node-voting"
