manifests/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-be
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: nginx
    # appgw.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
  - host: $dns_name1
    http:
      paths:
      - path: /voting
        pathType: Exact
        backend:
          service:
            name: node-voting-be-svc
            port:
              number: 8080
              
      - path: /bootstrap
        pathType: Exact
        backend:
          service:
            name: node-voting-be-svc
            port:
              number: 8080
              
      - path: /vote/(.*)
        pathType: Exact
        backend:
          service:
            name: node-voting-be-svc
            port:
              number: 8080
